Add the ability to show commands on context menu for Flutter Outline items
See #605.

--- a/package.json
+++ b/package.json
@@ -412,6 +412,12 @@
 					"command": "dart.startWithoutDebugging",
 					"group": "4.5_exec@1"
 				}
+			],
+			"view/item/context": [
+				// {
+				// 	"when": "view == dartFlutterOutline && viewItem =~ /dart-code:isWidget:.*--refactor--.*/",
+				// 	"command": "pub.get"
+				// }
 			]
 		},
 		"views": {
