--- a/package.json
+++ b/package.json
@@ -414,10 +414,10 @@
 				}
 			],
 			"view/item/context": [
-				// {
-				// 	"when": "view == dartFlutterOutline && viewItem =~ /dart-code:isWidget:.*--refactor--.*/",
-				// 	"command": "pub.get"
-				// }
+				{
+					"when": "false && view == dartFlutterOutline && viewItem =~ /dart-code:isWidget:.*--refactor--.*/",
+					"command": "pub.get"
+				}
 			]
 		},
 		"views": {
