--- a/package.json
+++ b/package.json
@@ -401,6 +401,10 @@
 				},
 				{
 					"when": "false",
+					"command": "_flutter.outline.refactor.flutter.wrap.row"
+				},
+				{
+					"when": "false",
 					"command": "_flutter.outline.refactor.flutter.move.up"
 				},
 				{
@@ -484,6 +488,10 @@
 				{
 					"when": "view == dartFlutterOutline && viewItem =~ /dart-code:isWidget:.*--refactor.flutter.wrap.column--.*/",
 					"command": "_flutter.outline.refactor.flutter.wrap.column"
+				},
+				{
+					"when": "view == dartFlutterOutline && viewItem =~ /dart-code:isWidget:.*--refactor.flutter.wrap.row--.*/",
+					"command": "_flutter.outline.refactor.flutter.wrap.row"
 				},
 				{
 					"when": "view == dartFlutterOutline && viewItem =~ /dart-code:isWidget:.*--refactor.flutter.move.up--.*/",
