Move Outline to its own Sidebar tab

--- a/package.json
+++ b/package.json
@@ -514,17 +514,28 @@
 				}
 			]
 		},
+		"viewsContainers": {
+			"activitybar": [
+				{
+					"id": "flutter",
+					"title": "Flutter",
+					"icon": "media/icons/flutter.svg"
+				}
+			]
+		},
 		"views": {
 			"explorer": [
-				{
-					"id": "dartFlutterOutline",
-					"name": "Flutter Outline",
-					"when": "dart-code:flutterProjectLoaded && dart-code:showFlutterOutline"
-				},
 				{
 					"id": "dartPackages",
 					"name": "Dependencies",
 					"when": "dart-code:dartProjectLoaded && !dart-code:hidePackageTree"
+				}
+			],
+			"flutter": [
+				{
+					"id": "dartFlutterOutline",
+					"name": "Outline",
+					"when": "dart-code:flutterProjectLoaded && dart-code:showFlutterOutline"
 				}
 			]
 		},
