Fixes to make icon appear in sidebar correctly

--- a/package.json
+++ b/package.json
@@ -519,7 +519,7 @@
 				{
 					"id": "flutter",
 					"title": "Flutter",
-					"icon": "media/icons/flutter.svg"
+					"icon": "media/icons/flutter_activity_bar.svg"
 				}
 			]
 		},
