--- a/package.json
+++ b/package.json
@@ -1010,7 +1010,7 @@
 		"watch": "tsc -watch -p ./",
 		"postinstall": "node ./node_modules/vscode/bin/install",
 		"lint": "tslint src/**/*.ts -t verbose",
-		"test": "npm run compile npm run test-only",
+		"test": "npm run compile && npm run test-only",
 		"instrument": "cd out/src && nyc instrument . . && cd ../..",
 		"write_empty_coverage": "cd out/src && nyc --all --reporter=none --include out/src echo && cd ../..",
 		"remap_empty_coverage": "cd out/src && run-for-every-file --src \"../../.nyc_output/*.json\" --run \"remap-istanbul -i {{src-file}} -o {{src-file}}\" && cd ../..",
