--- a/.travis.yml
+++ b/.travis.yml
@@ -41,17 +41,17 @@ before_install:
   - echo Setting variables...
   - if [[ $ONLY_RUN_DART_VERSION == "STABLE" ]]; then
       export DART_CHANNEL=stable;
-      export FLUTTER_BRANCH=beta;
+      export FLUTTER_BRANCH=beta-with-verbose-flutter-tester;
     else
       export DART_CHANNEL=dev;
-      export FLUTTER_BRANCH=master;
+      export FLUTTER_BRANCH=beta-with-verbose-flutter-tester;
     fi
   - mkdir with\ spaces
   - cd with\ spaces
   - echo Downloading Dart and Flutter...
   - curl https://storage.googleapis.com/dart-archive/channels/$DART_CHANNEL/release/latest/sdk/dartsdk-$DART_OS-x64-release.zip > dart-sdk.zip
   - unzip dart-sdk.zip > /dev/null
-  - git clone -b $FLUTTER_BRANCH https://github.com/flutter/flutter.git
+  - git clone -b $FLUTTER_BRANCH https://github.com/DanTup/flutter.git
   - export FLUTTER_ROOT=`pwd`/flutter
   - export DART_SDK_PATHS=`pwd`/dart-sdk/bin:`pwd`/flutter/bin
   - echo Configuring Dart and Flutter...
@@ -71,9 +71,7 @@ install:
 
 script:
   - npm run vscode:prepublish
-  # - npm test
-  - cd /Users/travis/build/Dart-Code/Dart-Code/test/test_projects/flutter_hello_world
-  - flutter/bin/flutter --suppress-analytics run --machine -v -t lib/main.dart -d flutter-tester --start-paused
+  - npm test
   # flutter_tester processes are leaked by tests that terminate early:
   # https://github.com/Dart-Code/Dart-Code/issues/1175
   # This doesn't affect end users (since normally we're not spawning their device) so we
