--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,7 @@ before_install:
   - git clone -b $FLUTTER_BRANCH https://github.com/DanTup/flutter.git
   - export FLUTTER_ROOT=`pwd`/flutter
   - export DART_SDK_PATHS=`pwd`/dart-sdk/bin:`pwd`/flutter/bin
+  - export PATH=`pwd`/dart-sdk/bin:`pwd`/flutter/bin:$PATH
   - echo Configuring Dart and Flutter...
   - flutter/bin/flutter config --no-analytics
   - flutter/bin/flutter update-packages
@@ -73,7 +74,7 @@ script:
   - npm run vscode:prepublish
   # - npm test
   - cd /Users/travis/build/Dart-Code/Dart-Code/test/test_projects/flutter_hello_world
-  - with\ spaces/flutter/bin/flutter --suppress-analytics run --machine -v -t lib/main.dart -d flutter-tester --start-paused
+  - flutter --suppress-analytics run --machine -v -t lib/main.dart -d flutter-tester --start-paused
   # flutter_tester processes are leaked by tests that terminate early:
   # https://github.com/Dart-Code/Dart-Code/issues/1175
   # This doesn't affect end users (since normally we're not spawning their device) so we
