--- a/.travis.yml
+++ b/.travis.yml
@@ -72,9 +72,9 @@ install:
 
 script:
   - npm run vscode:prepublish
-  # - npm test
-  - cd /Users/travis/build/Dart-Code/Dart-Code/test/test_projects/flutter_hello_world
-  - flutter --suppress-analytics run --machine -v -t lib/main.dart -d flutter-tester --start-paused
+  - npm test
+  #- cd /Users/travis/build/Dart-Code/Dart-Code/test/test_projects/flutter_hello_world
+  #- flutter --suppress-analytics run --machine -v -t lib/main.dart -d flutter-tester --start-paused
   # flutter_tester processes are leaked by tests that terminate early:
   # https://github.com/Dart-Code/Dart-Code/issues/1175
   # This doesn't affect end users (since normally we're not spawning their device) so we
