--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,11 @@ env:
     - FLUTTER_TEST=true
   matrix:
     - ONLY_RUN_CODE_VERSION=STABLE ONLY_RUN_DART_VERSION=STABLE
+    - ONLY_RUN_CODE_VERSION=STABLE ONLY_RUN_DART_VERSION=DEV
+ matrix:
+  fast_finish: true
+  allow_failures:
+    - env: ONLY_RUN_CODE_VERSION=STABLE ONLY_RUN_DART_VERSION=DEV
 
 addons:
   apt:
