--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ before_install:
   - export ELECTRON_NO_ATTACH_CONSOLE=1
   - export TRAVIS_COMMIT_AUTHOR="$(git log -1 $TRAVIS_COMMIT --pretty="%aN")"
   - gem install dpl
+  - pip install six
   - if [ $TRAVIS_OS_NAME == "linux" ]; then
       export CXX="g++-4.8" CC="gcc-4.8" DISPLAY=:99.0;
       sh -e /etc/init.d/xvfb start;
