--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,8 @@ before_install:
   - export TRAVIS_COMMIT_AUTHOR="$(git log -1 $TRAVIS_COMMIT --pretty="%aN")"
   - gem install dpl
   - export PATH=/usr/bin:$PATH
+  - which python
+  - pip install six
   - if [ $TRAVIS_OS_NAME == "linux" ]; then
       export CXX="g++-4.8" CC="gcc-4.8" DISPLAY=:99.0;
       sh -e /etc/init.d/xvfb start;
