--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,22 @@ environment:
   matrix:
     - ONLY_RUN_CODE_VERSION: STABLE
       ONLY_RUN_DART_VERSION: STABLE
+    - ONLY_RUN_CODE_VERSION: DEV
+      ONLY_RUN_DART_VERSION: STABLE
+    - ONLY_RUN_CODE_VERSION: STABLE
+      ONLY_RUN_DART_VERSION: DEV
+    - ONLY_RUN_CODE_VERSION: DEV
+      ONLY_RUN_DART_VERSION: DEV
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - ONLY_RUN_CODE_VERSION: DEV
+      ONLY_RUN_DART_VERSION: STABLE
+    - ONLY_RUN_CODE_VERSION: STABLE
+      ONLY_RUN_DART_VERSION: DEV
+    - ONLY_RUN_CODE_VERSION: DEV
+      ONLY_RUN_DART_VERSION: DEV
 
 install:
   - echo Misc setup
