Temp changes to simplify running integration tests against LSP impl

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,4 +22,5 @@
 	"dart.pubTestLogFile": "logs/pub_test.txt",
 	"dart.flutterDaemonLogFile": "logs/flutter_daemon.txt",
 	"dart.observatoryLogFile": "logs/observatory.txt",
+	"dart.previewLsp": false,
 }
